# Lunii-CYOA

./: .env.example  .gitignore  .windsurfrules.md  AGENTS.md  README.md  demo_run.py  demo_run_test.py  inputs_chapter_details.json  pyproject.toml  sitecustomize.py  test_pipeline.md  toml-specification.md
.cursor/rules/: write_pipelex.mdc
.pipelex/: pipelex.toml
.pipelex/inference/: backends.toml  routing_profiles.toml
.pipelex/inference/deck/: base_deck.toml
experiments/: cyoa_chapter_details_test.plx
src/: run_cyoa_pipeline.py
src/lunii_cyoa/: expansion.py  exporter.py  image_gen.py  loader.py  models.py  pipe_funcs.py  structures.py  tts.py
src/pipelines/: cyoa.plx  cyoa_concepts.plx
tests/: conftest.py  story_minimal.toml  story_with_assets_and_guard.toml  story_with_choices.toml  story_with_random.toml  test_expansion.py  test_exporter.py  test_loader.py  test_tts.py
